feat: add modular VPC + EKS infrastructure (Terraform)
- added VPC module (VPC, subnets, IGW, NAT, route tables)
- added EKS module (cluster, node group, roles, SGs)
- added backend configuration
- added root Terraform structure and variables
- state backend configured via backend.hcl (gitignored)
- initial apply successful

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .gitignore
 ### TERRAFORM ###
+backend.hcl
 .terraform/
 .terraform.lock.hcl
 *.tfstate
 *.tfstate.backup
+
 crash.log
 override.tf
 override.tf.json
