--- a/.github/workflows/app-ci.yml
+++ b/.github/workflows/app-ci.yml
@@ -5,6 +5,12 @@ on:
     branches:
       - main
 
+# OIDC-hez kell, hogy a runner ki tudjon kérni id-token-t,
+# és hozzáférjen a repo tartalmához.
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   ci-test:
     runs-on: ubuntu-latest
@@ -21,16 +27,37 @@ jobs:
           echo "Repo files:"
           ls -R
 
-  docker-build:
+  docker-build-and-push:
     runs-on: ubuntu-latest
     needs: ci-test
+
+    env:
+      AWS_REGION: eu-central-1
+      ECR_ACCOUNT_ID: 154744860201
+      ECR_REPO_NAME: eks-k8s-dev-app
+      IMAGE_TAG: latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build app Docker image
+      - name: Configure AWS credentials via OIDC
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::154744860201:role/terraform-eks-k8s-ecr-oidc-role
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        run: |
+          aws ecr get-login-password --region "$AWS_REGION" | docker login \
+            --username AWS \
+            --password-stdin "${ECR_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
+
+      - name: Build and push Docker image to ECR
         working-directory: app/reactflow-app
         run: |
-          echo "Building Docker image from app/reactflow-app..."
-          docker build -t eks-k8s-app-ci:test .
+          IMAGE_URI="${ECR_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO_NAME}:${IMAGE_TAG}"
+          echo "Building image: $IMAGE_URI"
+          docker build -t "$IMAGE_URI" .
+          echo "Pushing image to ECR..."
+          docker push "$IMAGE_URI"
