--- a/.github/workflows/app-ci.yml
+++ b/.github/workflows/app-ci.yml
@@ -5,8 +5,7 @@ on:
     branches:
       - main
 
-# OIDC-hez kell, hogy a runner ki tudjon kérni id-token-t,
-# és hozzáférjen a repo tartalmához.
+
 permissions:
   id-token: write
   contents: read
@@ -76,3 +75,24 @@ jobs:
           echo "Pushed tags:"
           echo "  - latest"
           echo "  - ${SHORT_SHA}"
+      - name: Update kubeconfig for EKS cluster
+        run: |
+          aws eks update-kubeconfig \
+            --region "$AWS_REGION" \
+            --name "eks-k8s-dev-cluster"
+
+      - name: Update Deployment image and wait for rollout
+        run: |
+          ECR_BASE="${ECR_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO_NAME}"
+          SHORT_SHA="$(echo "${GITHUB_SHA}" | cut -c1-8)"
+          IMAGE_SHA="${ECR_BASE}:${SHORT_SHA}"
+
+          echo "Updating Deployment to image: $IMAGE_SHA"
+
+          kubectl set image deployment/eks-k8s-dev-app \
+            eks-k8s-dev-app="$IMAGE_SHA" \
+            -n eks-k8s-dev-app
+
+          echo "Waiting for rollout to complete..."
+          kubectl rollout status deployment/eks-k8s-dev-app -n eks-k8s-dev-app
+
